# mesh

./: .gitignore  Cargo.toml  readme.md
examples/: show_index_mesh.rs
src/: aabb.rs  algorithms.rs  bv.rs  bvh.rs  csg.rs  half_edge.rs  index_mesh.rs  lib.rs  mesh.rs  primitives.rs  traits.rs  tree.rs  wing_edge.rs
src/algorithms/: algo_tests.rs
src/bvh/: build_options.rs  tests.rs
src/csg/: csg_tests.rs
src/half_edge/: half_edge_mesh.rs  tests.rs
src/index_mesh/: index_mesh_tests.rs
src/traits/: tests.rs
