[package]
name = "mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
glam = "0.23.0"
stl_io = "0.7.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
obj = "0.10.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
bevy = "0.10.0"
smooth-bevy-cameras = "0.8.0"
bevy_polyline = "0.6.0"
petgraph = "0.6.3"
rand = "0.8.5"
